2001-04-10  Kalle Marjola  <rpr@wapit.com>

	* gw/bb_store.c: Updated to use double-memory buffering and to do
	frequent dumps out of that data. Now it is fast and does not take
	much disk space. Interval is currently fixed (5 secs), and there
	is still no message queue limitations, and sendsms (push9 messages
	are not yet supported. But otherwise it should work.

	* gw/bearerbox.c|h: required little modifications

	* doc/userguide/userguide.xml: added notes of store-file variable
	
2001-04-10  Richard Braakman  <dark@wapit.com>

	* gw/smsbox.c: Add no-cache headers to sendsms replies.

2001-04-05  Uoti Urpala  <uau@wapit.com>

	* gwlib/http.c: Fixed a bug in the sending of HTTP replies. It was
	unlikely to be triggered with replies as short as Kannel normally
	uses, though.

	* gwlib/conn.[ch]: The callback function of registered connections
	is called when all queued output is sent. This was required for
	the above fix.

2001-04-04  Kalle Marjola  <rpr@wapit.com>

	* gw/smsbox.c: Bugfix. Fixed memory leak in header parsing

2001-04-03  Richard Braakman  <dark@wapit.com>

	* gwlib/fdset.c: When destroying an fdset with active fd's,
        simply ignore those fd's and make it the caller's responsibility
	to deal with them.  This reverses a change from 2000-11-22, which
	was made at the time to fix the http shutdown sequence.  It didn't,
	and now it's in the way of a better solution.

2001-03-30  Uoti Urpala  <uau@wapit.com>

	* gwlib/http.c: Enabled keepalive connections again.

2001-03-29  Uoti Urpala  <uau@wapit.com>

	* gw/urltrans.c: Test in find_translation() was the wrong way
	around, 'accepted-smsc' actually worked like denied-smsc. Fixed.
	Also enabled using 'accepted-smsc' in default SMS-service groups.

2001-03-29  Uoti Urpala  <uau@wapit.com>

	* gw/smsc_emi2.c: Added support for the "our-port" parameter.

	* gwlib/conn.[ch]: Added function conn_open_tcp_with_port, which
	allows specifying the local port number.

2001-03-29  Uoti Urpala  <uau@wapit.com>